# mini-git-server

./: .gitignore  .project  README.md  dependency-reduced-pom.xml  git.bat  pom.xml
data/repos/mytool.git/objects/pack/: pack-b7d37b984f10ef18071ba6565b09ccbc397a8081.idx  pack-b7d37b984f10ef18071ba6565b09ccbc397a8081.pack
data/repos/mytool.git/refs/heads/: master
data/repos/test.git/objects/pack/: pack-3caa4fce6f90102b65d129fc4fceb10cb891aeec.idx  pack-3caa4fce6f90102b65d129fc4fceb10cb891aeec.pack  pack-6558360c4b397a905b0a38c78f3ac6a0deaccc6c.idx  pack-6558360c4b397a905b0a38c78f3ac6a0deaccc6c.pack  pack-6f6600187edae7cddde3fb3c210c6b448ffed594.idx  pack-6f6600187edae7cddde3fb3c210c6b448ffed594.pack  pack-74c06692a7fc005e553fadeb88bb5d334e649e0d.idx  pack-74c06692a7fc005e553fadeb88bb5d334e649e0d.pack  pack-e0c4626205c0bd9f38bcc0d64506d541bfb422c4.idx  pack-e0c4626205c0bd9f38bcc0d64506d541bfb422c4.pack  pack-e1ce605fdc9061947d609de20dfe91e0d4b9ce3b.idx  pack-e1ce605fdc9061947d609de20dfe91e0d4b9ce3b.pack
data/repos/test.git/refs/heads/: develop  master
doc/: mini_git_server_desktop_readme.md
doc/minigit-tauri/src/: index.html
doc/minigit-tauri/src-tauri/: Cargo.toml  build.rs  nsis.template.nsi  tauri.conf.json
doc/minigit-tauri/src-tauri/src/: main.rs
src/main/resources/: application.properties  banner.txt  logback-spring.xml  messages.properties  messages_en.properties  messages_ja.properties  messages_zh.properties
src/main/resources/templates/: error.html  health.html  login.html  share-viewer.html
src/main/resources/templates/admin/: create.html  (+5 more)
(+28 files in other folders)
