[package]
name = "minigit-tauri"
version = "0.1.0"
edition = "2021"

[dependencies]
# Use a tauri 2.x version available on crates.io (2.4.1 is indexed).
tauri = { version = "2.4.1", features = [] }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
# Keep tauri-build aligned with tauri; 2.4.1 is available.
tauri-build = { version = "2.4.1", features = [] }
